--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -2,16 +2,56 @@
 
 <h2 style="text-align: center">{{ search | title}}</h2>
 
-<div class="col s4">
-  <div class="card">
-    <div class="card-image">
-      <a href="/"><img src="/" alt="" /></a>
+<div class="row">
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image">
+        <a href="/"
+          ><img
+            src="https://cf.ltkcdn.net/dogs/images/orig/235430-2000x1332-australian-shepherd-puppy.jpg"
+            alt=""
+        /></a>
+      </div>
+      <div class="card-content">
+        <p>TEST</p>
+      </div>
+      <div class="card-action">
+        <a href="/">View Listing: Price TEST PRICE</a>
+      </div>
     </div>
-    <div class="card-content">
-      <p>TEST</p>
+  </div>
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image">
+        <a href="/"
+          ><img
+            src="https://cf.ltkcdn.net/dogs/images/orig/235430-2000x1332-australian-shepherd-puppy.jpg"
+            alt=""
+        /></a>
+      </div>
+      <div class="card-content">
+        <p>TEST</p>
+      </div>
+      <div class="card-action">
+        <a href="/">View Listing: Price TEST PRICE</a>
+      </div>
     </div>
-    <div class="card-action">
-      <a href="/">View Listing: Price TEST PRICE</a>
+  </div>
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image">
+        <a href="/"
+          ><img
+            src="https://cf.ltkcdn.net/dogs/images/orig/235430-2000x1332-australian-shepherd-puppy.jpg"
+            alt=""
+        /></a>
+      </div>
+      <div class="card-content">
+        <p>TEST</p>
+      </div>
+      <div class="card-action">
+        <a href="/">View Listing: Price TEST PRICE</a>
+      </div>
     </div>
   </div>
 </div>
