--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CPLUSPLUS</title>
+    <title>C-PlusPlus</title>
     <link rel="stylesheet" href="{% static "css/style.css"%}">
     <link
       rel="stylesheet"
@@ -19,7 +19,7 @@
   <body>
     <nav>
       <div class="container nav-wrapper">
-        <a href="/">CPlusPlus</a>
+        <a href="/">C-PlusPlus</a>
         <ul id="nav-mobile" class="right">
           <li><a href="/">Home</a></li>
         </ul>
@@ -28,7 +28,7 @@
 
     <div class="container">
       <h1 style="text-align: center">
-        What do you want to search for on CPlusPlus?
+        What do you want to search for on C-PlusPlus?
       </h1>
       <div class="row">
         <div class="col s4">
@@ -64,7 +64,7 @@
 
       <form action="{% url 'new_search' %}" method="post">
         {% csrf_token %}
-        <input type="text" name="search" placeholder="search" />
+        <input type="text" name="search" placeholder="Search" />
         <button
           class="btn waves-effect waves-light"
           type="submit"
